<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/scanned"
        android:icon="@drawable/baseline_qr_code_scanner_24_black"
        android:title="@string/scan_history" />
    <item
        android:id="@+id/generated"
        android:title="@string/generate_history"></item>
    <item
        android:id="@+id/theme"
        android:checkable="false"
        android:title="@string/theme"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/light"
                    android:title="@string/light" />
                <item
                    android:id="@+id/dark"
                    android:title="@string/dark" />
                <item
                    android:id="@+id/auto"
                    android:title="@string/auto" />
            </group>
        </menu>
    </item>
</menu>