<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/blackWhite"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/blackWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/black_white"
            android:textColor="?color1" />

        <RadioButton
            android:id="@+id/foreground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colored_foreground"
            android:textColor="?color1" />

        <RadioButton
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colored_background"
            android:textColor="?color1" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/hueLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/hue" />

            <TextView
                android:id="@+id/hue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="8dp"
                android:text="0" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="360"
            android:padding="8dp"
            android:progress="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/back"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/preview" />

        <ImageView
            android:id="@+id/preview"
            android:layout_width="56dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_qr_code_24"
            app:tint="@color/black" />
    </LinearLayout>

</LinearLayout>