<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/grey10"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="TextView"
                android:textColor="@color/grey4" />

            <TextView
                android:id="@+id/format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PNG"
                android:textColor="@color/grey4" />
        </LinearLayout>

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:autoLink="all"
            android:background="@drawable/edit_text_bg"
            android:padding="16dp"
            android:text="TextView"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/resultImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_bg"
            android:padding="16dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/copyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_menu"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/baseline_content_copy_24" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/copy"
                    android:textColor="@color/grey6"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shareButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_menu"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/baseline_share_24" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/_share"
                    android:textColor="@color/grey6"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/regenerateButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_menu"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/baseline_autorenew_24" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/regenerate"
                    android:textColor="@color/grey6"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_menu"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/baseline_delete_forever_24"
                    app:tint="#FFFF0000" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:textColor="#FFFF0000"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>